--- a/app/src/main/res/layout/activity_novo_chamado.xml
+++ b/app/src/main/res/layout/activity_novo_chamado.xml
@@ -119,6 +119,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="40sp"
         android:text="Descreva a localização"
+
         android:textColor="@color/gray"
         android:textSize="15dp"
         app:layout_constraintTop_toBottomOf="@+id/predio_textview"
@@ -136,7 +137,7 @@
         android:layout_marginLeft="60dp"
 
         android:textColor="@color/black"
-        android:inputType="text" />
+        android:inputType="textMultiLine" />
 
     <TextView
         android:id="@+id/descricao_problema_textview"
@@ -163,7 +164,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
         android:hint=""
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textColor="@color/black"/>
 
 
