--- a/app/src/main/res/layout/activity_usuario_detalhes_chamado_encerrado.xml
+++ b/app/src/main/res/layout/activity_usuario_detalhes_chamado_encerrado.xml
@@ -4,59 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".usuario.DetalhesChamadoAberto"
+    tools:context=".usuario.DetalhesChamadoEncerrado"
     android:background="@color/blue">
 
-<com.google.android.material.appbar.AppBarLayout
-    android:id="@+id/toolbar2"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    >
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/toolbar2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Toolbar
-            android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:title="Detalhes Do Chamado"
-            android:background="@color/yellow"
-            android:titleMarginStart="50dp"
+            android:layout_height="wrap_content">
+            <Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:title="Detalhes Do Chamado"
+                android:background="@color/yellow"
+                android:titleMarginStart="50dp"
 
-            />
-        <ImageView
-            android:id="@+id/retornoHome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/retorno"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
-            android:onClick="voltarHome"
-            />
+                />
+            <ImageView
+                android:id="@+id/retornoHome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/retorno"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="10dp"
+                android:onClick="voltarHome"
+                />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.google.android.material.appbar.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+
+
+
+
+
+
+
 
     <View
         android:id="@+id/view_detalhes"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="540dp"
         android:background="@drawable/container_components"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="65dp"
-
+        android:layout_marginHorizontal="20dp"
 
         />
 
@@ -70,19 +79,18 @@
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         app:layout_constraintTop_toTopOf="@+id/view_detalhes"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-
+        android:layout_marginTop="20dp"
         />
 
     <View
-        android:id="@+id/flag_aberto"
+        android:id="@+id/flag_andamento"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="@drawable/flag_aberto"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         app:layout_constraintEnd_toEndOf="@+id/view_detalhes"
         app:layout_constraintTop_toTopOf="@+id/view_detalhes"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="45dp"
         android:layout_marginHorizontal="60dp"
 
         />
@@ -92,13 +100,13 @@
         android:id="@+id/flag_andamento_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="aberto"
+        android:text="Encerrado"
         android:textSize="24dp"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="@id/flag_aberto"
-        app:layout_constraintTop_toTopOf="@id/flag_aberto"
-        app:layout_constraintEnd_toEndOf="@id/flag_aberto"
-        app:layout_constraintBottom_toBottomOf="@id/flag_aberto"
+        app:layout_constraintStart_toStartOf="@id/flag_andamento"
+        app:layout_constraintTop_toTopOf="@id/flag_andamento"
+        app:layout_constraintEnd_toEndOf="@id/flag_andamento"
+        app:layout_constraintBottom_toBottomOf="@id/flag_andamento"
 
         />
 
@@ -120,11 +128,11 @@
     <EditText
         android:id="@+id/editTexCampus"
         style="@style/editText"
-        app:layout_constraintTop_toBottomOf="@id/flag_aberto"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/flag_andamento"
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:layout_marginTop="25dp"
         android:layout_marginLeft="140dp"
         android:hint="Politécnico"
@@ -150,15 +158,16 @@
     <EditText
         android:id="@+id/editTextPredio"
         style="@style/editText"
+        android:textColor="@color/black"
+
         app:layout_constraintTop_toBottomOf="@id/editTexCampus"
         app:layout_constraintStart_toEndOf="@+id/campus_textview"
         android:layout_width="match_parent"
-        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="140dp"
         android:hint="SEPT"
-        android:inputType="text" />
+        android:inputType="textMultiLine" />
 
     <TextView
         android:id="@+id/descricao_localizacao_textview"
@@ -178,21 +187,22 @@
     <EditText
         android:id="@+id/descricao_localizacao_editText"
         style="@style/editText"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
-        android:textColor="@color/black"
-        android:layout_height="90sp"
+        android:layout_height="60sp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
         android:hint=""
-        android:inputType="text" />
+        android:inputType="textMultiLine" />
 
     <TextView
         android:id="@+id/descricao_problema_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Descreva o problema"
+
         android:textSize="15dp"
         android:textColor="@color/gray"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
@@ -210,60 +220,100 @@
         app:layout_constraintTop_toBottomOf="@+id/descricao_problema_textview"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
         android:layout_width="match_parent"
-        android:layout_height="150sp"
+        android:layout_height="100sp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="60dp"
         android:hint=""
-        android:inputType="text" />
-
-
-
-
+        android:inputType="textMultiLine" />
 
 
     <TextView
-        android:id="@+id/botao_excluir_chamado"
-        style="@style/linkAcesso"
+        android:id="@+id/anexos_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:onClick="excluirChamado"
-        android:text="excluir chamado"
-        android:textAlignment="center"
+        android:text="Anexos"
+        android:textSize="15dp"
+        android:textColor="@color/gray"
+        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_editText"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+
+        />
+
+
+
+    <View
+        android:id="@+id/viewStatus"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:background="@drawable/container_components"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_detalhes"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="20dp"
+
+        />
+
+    <TextView
+        android:id="@+id/status_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="STATUS"
+        android:textSize="15dp"
         android:textColor="@color/blue"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/viewStatus"
+        app:layout_constraintTop_toTopOf="@+id/viewStatus"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
 
 
+        />
+
+    <ImageView
+        android:id="@+id/imagem_status"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/worker"
+        app:layout_constraintStart_toStartOf="@+id/viewStatus"
+        app:layout_constraintTop_toBottomOf="@+id/status_textview"
+        android:layout_marginTop="10sp"
+        android:layout_marginLeft="40sp"
+
+        />
 
 
+    <TextView
+        android:id="@+id/status_descricao"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5sp"
+        android:layout_marginTop="20dp"
+        android:text="Necessário troca da torneira, aguardando peça pelo almoxarifado"
+        android:textAlignment="textStart"
+        android:textColor="@color/gray"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="@+id/viewStatus"
+        app:layout_constraintStart_toEndOf="@+id/imagem_status"
+        app:layout_constraintTop_toBottomOf="@+id/status_textview"
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
