--- a/app/src/main/res/layout/activity_operario_atualizar_status.xml
+++ b/app/src/main/res/layout/activity_operario_atualizar_status.xml
@@ -92,7 +92,8 @@
                     android:layout_marginLeft="40dp"
                     android:layout_marginTop="15dp"
                     android:hint=""
-                    android:inputType="text"
+                    android:inputType="textMultiLine"
+                    android:maxLength="40"
                     android:textColor="#000000"
                     android:textColorHint="#000000"
                     app:layout_constraintStart_toStartOf="parent"
