--- a/app/src/main/res/layout/activity_operario_detalhes_ordem_servico_aberta.xml
+++ b/app/src/main/res/layout/activity_operario_detalhes_ordem_servico_aberta.xml
@@ -187,7 +187,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginTop="5dp"
         android:hint=""
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textColor="#000000"
         android:textColorHint="#000000"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
@@ -216,7 +216,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginTop="5dp"
         android:hint=""
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textColor="#000000"
         android:textColorHint="#000000"
         app:layout_constraintStart_toStartOf="@+id/view_detalhes"
