--- a/app/src/main/res/layout/activity_usuario_detalhes_chamado_em_andamento.xml
+++ b/app/src/main/res/layout/activity_usuario_detalhes_chamado_em_andamento.xml
@@ -49,18 +49,10 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-
-
-
-
-
-
-
-
     <View
         android:id="@+id/view_detalhes"
         android:layout_width="match_parent"
-        android:layout_height="540dp"
+        android:layout_height="480dp"
         android:background="@drawable/container_components"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -188,8 +180,8 @@
         android:id="@+id/descricao_localizacao_editText"
         style="@style/editText"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/descricao_localizacao_textview"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
+        app:layout_constraintTop_toBottomOf="@id/descricao_localizacao_textview"
+        app:layout_constraintStart_toStartOf="@id/view_detalhes"
         android:layout_width="match_parent"
         android:layout_height="60sp"
         android:layout_marginTop="5dp"
@@ -227,23 +219,6 @@
         android:inputType="textMultiLine" />
 
 
-    <TextView
-        android:id="@+id/anexos_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anexos"
-        android:textSize="15dp"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_editText"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="40sp"
-
-
-        />
-
-
-
     <View
         android:id="@+id/viewStatus"
         android:layout_width="match_parent"
@@ -271,34 +246,20 @@
 
         />
 
-    <ImageView
-        android:id="@+id/imagem_status"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/worker"
-        app:layout_constraintStart_toStartOf="@+id/viewStatus"
-        app:layout_constraintTop_toBottomOf="@+id/status_textview"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="40sp"
 
-        />
-
-
-    <TextView
-        android:id="@+id/status_descricao"
-        android:layout_width="230dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewComentarios"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5sp"
-        android:layout_marginTop="20dp"
-        android:text="Necessário troca da torneira, aguardando peça pelo almoxarifado"
-        android:textAlignment="textStart"
-        android:textColor="@color/gray"
-        android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="@+id/viewStatus"
-        app:layout_constraintStart_toEndOf="@+id/imagem_status"
-        app:layout_constraintTop_toBottomOf="@+id/status_textview"
+        android:layout_marginTop="5dp"
+        app:layout_constraintBottom_toBottomOf="@id/viewStatus"
+        app:layout_constraintStart_toStarOf="@id/status_textview"
+        app:layout_constraintTop_toBottomOf="@id/status_textview"/>
 
-        />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
