--- a/app/src/main/res/layout/activity_usuario_detalhes_chamado_encerrado.xml
+++ b/app/src/main/res/layout/activity_usuario_detalhes_chamado_encerrado.xml
@@ -271,34 +271,22 @@
 
         />
 
-    <ImageView
-        android:id="@+id/imagem_status"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/worker"
-        app:layout_constraintStart_toStartOf="@+id/viewStatus"
-        app:layout_constraintTop_toBottomOf="@+id/status_textview"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="40sp"
-
-        />
-
-
-    <TextView
-        android:id="@+id/status_descricao"
-        android:layout_width="230dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewComentarios"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5sp"
-        android:layout_marginTop="20dp"
-        android:text="Necessário troca da torneira, aguardando peça pelo almoxarifado"
-        android:textAlignment="textStart"
-        android:textColor="@color/gray"
-        android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="@+id/viewStatus"
-        app:layout_constraintStart_toEndOf="@+id/imagem_status"
-        app:layout_constraintTop_toBottomOf="@+id/status_textview"
+        android:layout_marginTop="5dp"
+        app:layout_constraintBottom_toBottomOf="@id/viewStatus"
+        app:layout_constraintStart_toStarOf="@id/status_textview"
+        app:layout_constraintTop_toBottomOf="@id/status_textview"/>
 
-        />
+
+
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
