--- a/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
+++ b/app/src/main/res/layout/activity_operario_manter_ordem_de_servico.xml
@@ -78,25 +78,11 @@
         />
 
 
-    <View
-        android:id="@+id/flag_aberto1"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/flag_aberto"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/numero_chamado_detalhes"
-        android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="60dp">
-
-    </View>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_marginTop="25sp"
+        android:layout_marginTop="10sp"
         app:layout_constraintStart_toStartOf="parent"
         >
 
@@ -108,8 +94,8 @@
                 android:text="CAMPUS"
                 android:textColor="@color/gray"
                 android:textSize="15dp"
-                app:layout_constraintStart_toStartOf="@id/flag_aberto1"
-                app:layout_constraintTop_toBottomOf="@id/flag_aberto1"
+                app:layout_constraintStart_toStartOf="@id/numero_chamado_detalhes"
+                app:layout_constraintTop_toBottomOf="@id/numero_chamado_detalhes"
 
 
                 />
@@ -118,7 +104,7 @@
             android:id="@+id/ediTextCampus"
             style="@style/editText"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="5dp"
             android:hint=""
@@ -138,7 +124,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_marginTop="25sp">
+        android:layout_marginTop="10sp">
 
         <TextView
             android:id="@+id/predio_textview"
@@ -157,7 +143,7 @@
             android:id="@+id/ediTextPredio"
             style="@style/editText"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="38dp"
             android:layout_marginTop="5dp"
             android:hint=""
@@ -194,7 +180,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginTop="5dp"
         android:hint=""
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textColor="#000000"
         android:textColorHint="#000000"
         app:layout_constraintStart_toStartOf="parent"
@@ -219,12 +205,12 @@
         android:id="@+id/descricao_problema_editText"
         style="@style/editText"
         android:layout_width="match_parent"
-        android:layout_height="150sp"
+        android:layout_height="100sp"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="20dp"
         android:hint=""
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textColor="#000000"
         android:textColorHint="#000000"
         app:layout_constraintStart_toStartOf="parent"
