--- a/app/src/main/res/layout/activity_operario_redirecionar.xml
+++ b/app/src/main/res/layout/activity_operario_redirecionar.xml
@@ -135,7 +135,7 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="15dp"
         android:hint=""
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textColor="#000000"
         android:textColorHint="#000000"
         app:layout_constraintStart_toStartOf="parent"
