--- a/app/src/main/res/layout/activity_usuario_detalhes_chamado_aberto.xml
+++ b/app/src/main/res/layout/activity_usuario_detalhes_chamado_aberto.xml
@@ -18,7 +18,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
