--- a/app/src/main/res/layout/activity_usuario_detalhes_chamado_encerrado.xml
+++ b/app/src/main/res/layout/activity_usuario_detalhes_chamado_encerrado.xml
@@ -20,7 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -60,7 +60,7 @@
     <View
         android:id="@+id/view_detalhes"
         android:layout_width="match_parent"
-        android:layout_height="540dp"
+        android:layout_height="460dp"
         android:background="@drawable/container_components"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -227,62 +227,94 @@
         android:inputType="textMultiLine" />
 
 
-    <TextView
-        android:id="@+id/anexos_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anexos"
-        android:textSize="15dp"
-        android:textColor="@color/gray"
-        app:layout_constraintStart_toStartOf="@+id/view_detalhes"
-        app:layout_constraintTop_toBottomOf="@+id/descricao_problema_editText"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="40sp"
 
-
-        />
-
-
-
-    <View
-        android:id="@+id/viewStatus"
+    <ScrollView
+        android:id="@+id/scrollbarHistoricoStatus"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:background="@drawable/container_components"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_detalhes"
+        android:layout_height="190dp"
+        app:layout_constraintTop_toBottomOf="@id/view_detalhes"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="20dp"
-
-        />
-
-    <TextView
-        android:id="@+id/status_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="STATUS"
-        android:textSize="15dp"
-        android:textColor="@color/blue"
-        app:layout_constraintStart_toStartOf="@+id/viewStatus"
-        app:layout_constraintTop_toTopOf="@+id/viewStatus"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="40sp"
-
-
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewComentarios"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:layout_constraintBottom_toBottomOf="@id/viewStatus"
-        app:layout_constraintStart_toStartOf="@id/status_textview"
-        app:layout_constraintTop_toBottomOf="@id/status_textview"/>
+        android:orientation="vertical"
+        android:fillViewport="true"
+        android:background="@drawable/container_components">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/textViewHistoricoStatus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:text="Histórico Status"
+                android:textSize="18dp"
+                android:textColor="@color/blue"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
 
+            <LinearLayout
+                android:id="@+id/LinearLayoutStatus"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:id="@+id/data_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Data"
+                    android:textSize="15dp"
+                    android:textColor="@color/gray"
+                    app:layout_constraintStart_toStartOf="@+id/campus_textview"
+                    app:layout_constraintTop_toBottomOf="@id/campus_textview"
+                    android:layout_marginLeft="40sp"
+
+
+                    />
+
+                <TextView
+                    android:id="@+id/descricao_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Descrição"
+                    android:textSize="15dp"
+                    android:textColor="@color/gray"
+                    app:layout_constraintStart_toStartOf="@+id/campus_textview"
+                    app:layout_constraintTop_toBottomOf="@id/campus_textview"
+                    android:layout_marginLeft="40sp"
+
+
+                    />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewComentarios"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="15dp" />
+
+
+
+
+
+
+
+
+
+
+
+
+        </LinearLayout>
+
+
+
+
+    </ScrollView>
 
 
 
